tests/error/comprehension_errors/borrow_leaked2.err
Error: Drop violation (at $FILE:12:23)
   | 
10 | @guppy
11 | def foo(qs: list[qubit] @owned) -> list[int]:
12 |     return [bar(q) for q in qs]
   |                        ^ Variable `q` with non-droppable type `qubit` is leaked

Guppy compilation failed due to 1 previous error
